--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "node server/index.js"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.6.7",
