--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.484.0",
     "natural": "^6.10.4",
     "puppeteer": "^22.0.0",
