--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.484.0",
     "natural": "^6.10.4",
+    "posthog-js": "^1.234.1",
     "puppeteer": "^22.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
